--- a/my_experiments/constraints_sphere.ipynb
+++ b/my_experiments/constraints_sphere.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7002\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7001\n"
      ]
     }
    ],
@@ -51,20 +51,24 @@
     "\n",
     "# Transparent objects\n",
     "# brick = parser.AddModelFromFile(\"models/cube_transparent.sdf\")\n",
-    "# grasp1 = parser.AddModelFromFile(\"models/wsg_transparent.sdf\")\n",
-    "# grasp2 = parser.AddModelFromFile(\"models/wsg_transparent.sdf\")\n",
-    "# grasp3 = parser.AddModelFromFile(\"models/wsg_transparent.sdf\")\n",
-    "# grasp4 = parser.AddModelFromFile(\"models/wsg_transparent.sdf\")\n",
+    "grasp1 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
+    "grasp2 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
+    "grasp3 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
+    "grasp4 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
+    "grasp5 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
+    "grasp6 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
+    "grasp7 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
     "\n",
-    "grasp1 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
-    "grasp2 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
-    "grasp3 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
-    "grasp4 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
     "\n",
-    "brick = parser.AddModels(file_name=\"my_sdfs/cylinder.sdf\")[0]\n",
+    "# grasp1 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
+    "# grasp2 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
+    "# grasp3 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
+    "# grasp4 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
+    "\n",
+    "brick = parser.AddModels(file_name=\"my_sdfs/sphere.sdf\")[0]\n",
     "plant.Finalize()\n",
     "\n",
-    "bodies_list1 = [grasp1, grasp2, grasp3, grasp4]"
+    "bodies_list1 = [grasp1, grasp2, grasp3, grasp4, grasp5, grasp6, grasp7]"
    ]
   },
   {
@@ -78,8 +82,11 @@
     "B_Ggrasp2 = plant.GetBodyByName(\"body\", grasp2)\n",
     "B_Ggrasp3 = plant.GetBodyByName(\"body\", grasp3)\n",
     "B_Ggrasp4 = plant.GetBodyByName(\"body\", grasp4)\n",
+    "B_Ggrasp5 = plant.GetBodyByName(\"body\", grasp5)\n",
+    "B_Ggrasp6 = plant.GetBodyByName(\"body\", grasp6)\n",
+    "B_Ggrasp7 = plant.GetBodyByName(\"body\", grasp7)\n",
     "\n",
-    "bodies_list = [B_O, B_Ggrasp1, B_Ggrasp2, B_Ggrasp3, B_Ggrasp4]"
+    "bodies_list = [B_O, B_Ggrasp1, B_Ggrasp2, B_Ggrasp3, B_Ggrasp4, B_Ggrasp5, B_Ggrasp6, B_Ggrasp7]"
    ]
   },
   {
@@ -95,7 +102,7 @@
     "            plant=plant,\n",
     "            scene_graph=scene_graph,\n",
     "            body=body,\n",
-    "            length=0.2\n",
+    "            length=0.09\n",
     "        )\n",
     "        continue\n",
     "    AddFrameTriadIllustration(\n",
@@ -103,7 +110,7 @@
     "        scene_graph=scene_graph,\n",
     "        body=body,\n",
     "        length=0.09,\n",
-    "        # opacity=0.2,\n",
+    "        opacity=0.2,\n",
     "    )"
    ]
   },
@@ -111,37 +118,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pydrake.geometry.MeshcatVisualizer at 0x160f899b0>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "meshcat.Delete()\n",
     "meshcat.SetProperty(\"/Background\", \"visible\", False)\n",
-    "MeshcatVisualizer.AddToBuilder(builder, scene_graph, meshcat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "MeshcatVisualizer.AddToBuilder(builder, scene_graph, meshcat)\n",
     "diagram = builder.Build()\n",
     "context = diagram.CreateDefaultContext()\n",
     "plant_context = plant.GetMyContextFromRoot(context)"
@@ -149,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,21 +139,21 @@
     "world_body = plant.world_body()\n",
     "X_WO = plant.EvalBodyPoseInWorld(plant_context, world_body)\n",
     "\n",
-    "rotation_constraints = np.linspace(0, 2*np.pi, len(bodies_list))-0.2\n",
-    "z = np.linspace(-.12, 0.12, len(bodies_list)-1)\n",
+    "rotation_constraints = np.linspace(-np.pi, np.pi, len(bodies_list)-1, endpoint=False)\n",
+    "p_GgraspO = [0, 0.11, 0]\n",
     "R_GgraspO = {}\n",
     "X_GgraspO = {}\n",
     "X_OGgrasp = {}\n",
     "X_WGgrasp = {}\n",
     "\n",
-    "for i in range(len(rotation_constraints)-1):\n",
-    "    R_GgraspO[i] = RotationMatrix.MakeZRotation(rotation_constraints[i])\n",
-    "    X_GgraspO[i] = RigidTransform(R_GgraspO[i], [0,.11,z[i]])\n",
+    "for i in range(len(rotation_constraints)):\n",
+    "    R_GgraspO[i] = RotationMatrix.MakeYRotation(np.pi/2)@RotationMatrix.MakeZRotation(rotation_constraints[i])\n",
+    "    X_GgraspO[i] = RigidTransform(R_GgraspO[i], p_GgraspO)\n",
     "    X_OGgrasp[i] = X_GgraspO[i].inverse()\n",
     "    X_WGgrasp[i] = X_WO.multiply(X_OGgrasp[i])\n",
     "\n",
     "\n",
-    "for i in range(len(rotation_constraints)-1):\n",
+    "for i in range(len(rotation_constraints)):\n",
     "    plant.SetFreeBodyPose(plant_context, bodies_list[i+1], X_WGgrasp[i])\n",
     "    plant.GetJointByName(\"left_finger_sliding_joint\", bodies_list1[i]).set_translation(\n",
     "        plant_context, -0.025\n",
@@ -184,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
